fix up fetchLastValue() and fetchLastValueInRange()